--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
-    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="A5-Dev-Board-main/assets/logo.png" type="image/x-icon">
     <!-- DaisyUI CDN -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -15,3 +15,20 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
 </head>
+<body class="bg-[#F4F7FF]">
+    <!-- Header Start -->
+    <header class="container mx-auto">
+        <div class="navbar bg-base-100 shadow-sm rounded-xl">
+            <div class="cursor-pointer flex items-center flex-1">
+                <figure>
+                    <img class="w-8" src="A5-Dev-Board-main/assets/logo.png" alt="Logo">
+                </figure>
+                <a class="ml-1 text-xl" href="#">Dev<span class="font-bold">Board</span></a>
+            </div>
+            <div class="flex-none">
+                <button class="btn bg-[#3752FD] text-white my-4 rounded-lg"><a href="index.html">Back To
+                        Desk</a></button>
+            </div>
+        </div>
+    </header>
+    <!-- Header End -->
