--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev Board</title>
-    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="A5-Dev-Board-main/assets/logo.png" type="image/x-icon">
 
     <!-- DaisyUI CDN -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
@@ -25,3 +25,33 @@
        }
     </style>
 </head>
+<body class="bg-[#15ceb7]">
+    <!-- Header Start -->
+    <header class="container mx-auto">
+        <div class="navbar bg-base-100 shadow-sm rounded-lg p-3">
+            <div class="cursor-pointer flex items-center flex-1">
+                <figure>
+                    <img class="w-8" src="A5-Dev-Board-main/assets/logo.png" alt="Logo">
+                </figure>
+                <a class="ml-1 text-xl" href="#">Dev<span class="font-bold">Board</span></a>
+            </div>
+            <div class="flex-none">
+                <ul class="menu menu-horizontal px-1 flex items-center">
+                    <li>
+                        <figure class="bg-gray-100 rounded-xl">
+                            <img class="w-5" src="A5-Dev-Board-main/assets/checkbox.png" alt="checkbox">
+                            <figcaption id="total-task" class="text-xl font-bold">
+                                23
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li id="theme-changer">
+                        <figure class="bg-gray-50 rounded-full ml-4">
+                            <img class="w-8" src="A5-Dev-Board-main/assets/theme-btn.png" alt="Theme">
+                        </figure>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <!-- Header Start -->
