--- a/blog.html
+++ b/blog.html
@@ -32,3 +32,18 @@
         </div>
     </header>
     <!-- Header End -->
+       <!-- Main Content Start -->
+    <main class="container mx-auto mt-2">
+        <h1 class="text-center font-bold text-xl my-2">Blogs</h1>
+        <div class="bg-white my-2 p-3 rounded-lg shadow-sm">
+            <h1 class="font-bold text-lg border-b border-dotted border-gray-500 mb-2">What are the different ways to
+                select an element in the DOM?</h1>
+            <h1>We can select an element in the DOM by several ways. For Example:</h1>
+            <ul class="list-disc ml-8">
+                <li>Using getElementById</li>
+                <li>Using getElementsByClassName</li>
+                <li>Using getElementsByTagName</li>
+                <li>Using querySelector</li>
+                <li>Using querySelectorAll</li>
+            </ul>
+        </div>
