--- a/index.html
+++ b/index.html
@@ -55,3 +55,18 @@
         </div>
     </header>
     <!-- Header Start -->
+    <main class="container mx-auto flex gap-4 mt-4">
+        <!-- Left Part Start -->
+        <section class="flex-1 bg-base-100 p-2 rounded-xl w-4/6 shadow-sm">
+
+            <!-- Top-Card Start -->
+            <div class="flex gap-6 mb-2">
+                <div class="flex items-center gap-8 bg-[#F4F7FF] p-4 rounded-xl w-1/4">
+                    <figure>
+                        <img src="A5-Dev-Board-main/assets/checkbox.png" alt="checkbox">
+                    </figure>
+                    <div>
+                        <p>Task Assigned</p>
+                        <span class="text-xl font-bold">0</span><h2 id="task-count" class="text-xl font-bold inline-block">6</h2>
+                    </div>
+                </div>
