--- a/blog.html
+++ b/blog.html
@@ -47,3 +47,12 @@
                 <li>Using querySelectorAll</li>
             </ul>
         </div>
+        <div class="bg-white my-2 p-3 rounded-lg shadow-sm">
+            <h1 class="font-bold text-lg border-b border-dotted border-gray-500 mb-2">What is the difference between
+                innerHTML, innerText, and textContent?</h1>
+            <ul class="list-disc ml-8">
+                <li><b>InnerHTML:</b> Using innerHTML allows you to see exactly what’s in the HTML markup contained within a string, including elements like spacing, line breaks and formatting.</li>
+                <li><b>InnerText:</b> This approximates the “rendered” text content of a node and is aware of styling and CSS. It’s most effective when you only need to see what’s in the element without the formatting.</li>
+                <li><b>TextContent:</b> This retrieves and sets the content of the tag as plain text. It’s most effective when you want to see what’s in an element, plus styling.</li>
+            </ul>
+        </div>
