--- a/index.html
+++ b/index.html
@@ -70,3 +70,17 @@
                         <span class="text-xl font-bold">0</span><h2 id="task-count" class="text-xl font-bold inline-block">6</h2>
                     </div>
                 </div>
+                <a href="blog.html" class="flex items-center bg-gradient-to-r from-[#3752FD]  via-[#6C7FFA] to-[#9BA8F8] p-4 pr-16 rounded-xl text-white text-lg text-wrap w-2/4">
+                    <figure>
+                        <img src="A5-Dev-Board-main/assets/board.png" alt="Board">
+                    </figure>
+                    <p>Discover Something New Today!</p>
+                </a>
+                <div class="flex items-center gap-8 bg-[#F4F7FF] p-4 rounded-xl w-1/4">
+                    <figure>
+                        <img src="A5-Dev-Board-main/assets/calender.png" alt="calender">
+                    </figure>
+                    <p><span id="day"></span><br> <span id="month-year" class="font-bold"></span></p>
+                </div>
+            </div>
+            <!-- Top-Card End -->
