--- a/blog.html
+++ b/blog.html
@@ -56,3 +56,19 @@
                 <li><b>TextContent:</b> This retrieves and sets the content of the tag as plain text. It’s most effective when you want to see what’s in an element, plus styling.</li>
             </ul>
         </div>
+        <div class="bg-white my-2 p-3 rounded-lg shadow-sm">
+            <h1 class="font-bold text-lg border-b border-dotted border-gray-500 mb-2">What is event delegation in the
+                DOM?</h1>
+            <p>Event delegation in the DOM is a technique where a single event listener is attached to a parent element, rather than individual listeners on each child element. This leverages event bubbling, where events originating from child elements propagate up the DOM tree to their parent.</p>
+        </div>
+        <div class="bg-white my-2 p-3 rounded-lg shadow-sm">
+            <h1 class="font-bold text-lg border-b border-dotted border-gray-500 mb-2">What is event bubbling in the DOM?
+            </h1>
+            <p>Event bubbling in the DOM is the process by which an event, when triggered on a specific element, propagates upwards through the DOM tree. Starting at the target element where the event originated, the event triggers any attached event listeners, then travels to its immediate parent element, triggering those listeners as well. This upward propagation continues through each ancestor element, effectively "bubbling" up the hierarchy until it reaches the root of the DOM. </p>
+        </div>
+        <div class="bg-white my-2 p-3 rounded-lg shadow-sm">
+            <h1 class="font-bold text-lg border-b border-dotted border-gray-500 mb-2">How do you create, add, and remove
+                elements using JavaScript?</h1>
+            <h1>
+                JavaScript provides powerful tools for dynamically manipulating the DOM, allowing you to create, add, and remove HTML elements. Here's a breakdown of the key methods:
+            </h1>
