--- a/index.html
+++ b/index.html
@@ -84,3 +84,89 @@
                 </div>
             </div>
             <!-- Top-Card End -->
+              <!-- Remaining Card Start -->
+            <div class="flex flex-wrap w-full gap-4">
+                <div class="bg-[#F4F7FF] p-4 rounded-xl w-[32%]">
+                    <h2 class="bg-white inline-block p-2 rounded-xl">ShopEase</h2>
+                    <h1 class="task-name text-xl font-bold my-2">Fix Mobile Button Issue</h1>
+                    <p class="bg-white text-gray-500 p-4 truncate rounded-xl">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly</p>
+                    <div class="flex justify-between items-center">
+                        <div class="mt-4">
+                            <h2>Deadline</h2>
+                            <h2 class="font-bold">21 March 2025</h2>
+                        </div>
+                        <button id="btn-completed-1" class="btn-completed btn bg-[#3752FD] text-white">Completed</button>
+                    </div>
+                </div>
+                <div class="bg-[#F4F7FF] p-4 rounded-xl w-[32%]">
+                    <h2 class="bg-white inline-block p-2 rounded-xl">CloudSync</h2>
+                    <h1 class="task-name text-xl font-bold my-2">Add Dark Mode</h1>
+                    <p class="bg-white text-gray-500 p-4 truncate rounded-xl">Store the user's preference in localStorage, update CSS variables dynamically, and apply a smooth transition effect.</p>
+                    <div class="flex justify-between items-center">
+                        <div class="mt-4">
+                            <h2>Deadline</h2>
+                            <h2 class="font-bold">21 March 2025</h2>
+                        </div>
+                        <button id="btn-completed-2" class="btn-completed btn bg-[#3752FD] text-white">Completed</button>
+                    </div>
+                </div>
+                <div class="bg-[#F4F7FF] p-4 rounded-xl w-[32%]">
+                    <h2 class="bg-white inline-block p-2 rounded-xl">SwiftPay</h2>
+                    <h1 class="task-name text-xl font-bold my-2">Optimize Home Page </h1>
+                    <p class="bg-white text-gray-500 p-4 truncate rounded-xl">Debug using
+                        Chrome DevTools, check for overlapping elements, and ensure onClick works properly</p>
+                    <div class="flex justify-between items-center">
+                        <div class="mt-4">
+                            <h2>Deadline</h2>
+                            <h2 class="font-bold">21 March 2025</h2>
+                        </div>
+                        <button id="btn-completed-3" class="btn-completed btn bg-[#3752FD] text-white">Completed</button>
+                    </div>
+                </div>
+                <div class="bg-[#F4F7FF] p-4 rounded-xl w-[32%]">
+                    <h2 class="bg-white inline-block p-2 rounded-xl">Meta</h2>
+                    <h1 class="task-name text-xl font-bold my-2">Add new emoji 🤲</h1>
+                    <p class="bg-white text-gray-500 p-4 truncate rounded-xl">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly</p>
+                    <div class="flex justify-between items-center">
+                        <div class="mt-4">
+                            <h2>Deadline</h2>
+                            <h2 class="font-bold">21 March 2025</h2>
+                        </div>
+                        <button id="btn-completed-4" class="btn-completed btn bg-[#3752FD] text-white">Completed</button>
+                    </div>
+                </div>
+                <div class="bg-[#F4F7FF] p-4 rounded-xl w-[32%]">
+                    <h2 class="bg-white inline-block p-2 rounded-xl">Google LLC</h2>
+                    <h1 class="task-name text-xl font-bold my-2">Integrate OpenAI API</h1>
+                    <p class="bg-white text-gray-500 p-4 truncate rounded-xl">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly</p>
+                    <div class="flex justify-between items-center">
+                        <div class="mt-4">
+                            <h2>Deadline</h2>
+                            <h2 class="font-bold">21 March 2025</h2>
+                        </div>
+                        <button id="btn-completed-5" class="btn-completed btn bg-[#3752FD] text-white">Completed</button>
+                    </div>
+                </div>
+                <div class="bg-[#F4F7FF] p-4 rounded-xl w-[32%]">
+                    <h2 class="bg-white inline-block p-2 rounded-xl">Glassdoar</h2>
+                    <h1 class="task-name text-xl font-bold my-2">Improve Job Searching</h1>
+                    <p class="bg-white text-gray-500 p-4 truncate rounded-xl">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly</p>
+                    <div class="flex justify-between items-center">
+                        <div class="mt-4">
+                            <h2>Deadline</h2>
+                            <h2 class="font-bold">21 March 2025</h2>
+                        </div>
+                        <button id="btn-completed-6" class="btn-completed btn bg-[#3752FD] text-white">Completed</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Remaining Card End -->
+
+        </section>
+        <!-- Left Part End -->
+          <!-- Right Part Start -->
+        <section class="shadow-sm bg-base-100 p-4 rounded-xl text-center w-2/6">
+            <figure class="flex items-center gap-4 justify-center">
+                <img src="A5-Dev-Board-main/assets/activity.png" alt="">
+                <figcaption>Activity Log</figcaption>
+            </figure>
