--- a/blog.html
+++ b/blog.html
@@ -72,3 +72,13 @@
             <h1>
                 JavaScript provides powerful tools for dynamically manipulating the DOM, allowing you to create, add, and remove HTML elements. Here's a breakdown of the key methods:
             </h1>
+            <ul class="list-disc ml-8">
+                <li>Creating Elements by "document.createElement(tagName)"</li>
+                <li>Adding Elements using "element.appendChild(childNode)"</li>
+                <li>Removing Elements by using "parentNode.removeChild(childNode)"</li>
+            </ul>
+        </div>
+    </main>
+    <!-- Main Content End -->
+</body>
+</html>
