--- a/index.html
+++ b/index.html
@@ -170,3 +170,16 @@
                 <img src="A5-Dev-Board-main/assets/activity.png" alt="">
                 <figcaption>Activity Log</figcaption>
             </figure>
+            <button id="clear-history" class="btn bg-[#3752FD] text-white my-4">Clear Histoy</button>
+            <div id="task-list"></div>
+        </section>
+        <!-- Right Part End -->
+    </main>
+    <!-- Main Content End -->
+
+
+    <!-- Script -->
+    <script src="script.js"></script>
+</body>
+
+</html>
